<resources>
    <string name="app_name">Business-Card-Wallet</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Είσοδος</string>
    <string name="prompt_email">Ηλεκτρονική Διεύθυνση (e-mail)</string>
    <string name="prompt_profession">Επάγγελμα/Ιδιότητα</string>
    <string name="prompt_company">Επιχείρηση/Οργανισμός</string>
    <string name="prompt_password">Κωδικός</string>
    <string name="prompt_password_again">Κωδικός (ξανά)</string>
    <string name="prompt_firstName">Όνομα</string>
    <string name="prompt_lastName">Επίθετο</string>
    <string name="prompt_user_name">Ονοματεπώνυμο</string>
    <string name="action_sign_in">Είσοδος ή Δημιουργία Λογαριασμού</string>
    <string name="action_settings">Ρυθμίσεις</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Errors -->
    <string name="error_passwords_not_match">Οι κωδικοί δεν ταιριάζουν</string>
    <string name="error_invalid_card_id">Το id της κάρτας πρέπει να είναι ακέραιος αριθμός</string>
    <string name="error_invalid_name">Μη Αποδεκτό Ονοματεπώνυμο</string>
    <string name="error_invalid_email">Μη Αποδεκτή Ηλεκτρονική Διεύθυνση</string>
    <string name="error_invalid_password">Ο Κωδικός είναι πολύ μικρός</string>
    <string name="error_incorrect_password">Λανθασμένος Κωδικός</string>
    <string name="error_incorrect_email_or_password">Λανθασμένη Ηλ. Διεύθυνση ή Κωδικός</string>
    <string name="error_field_required">Το πεδίο είναι υποχρεωτικό</string>
    <string name="error_field_invalid_phone_number">Μη Αποδεκτός Αριθμός Τηλεφώνου</string>

    <!-- Actions -->
    <string name="action_sign_in_short">ΕΙΣΟΔΟΣ</string>
    <string name="action_sign_up_short">ΔΗΜΙΟΥΡΓΙΑ ΛΟΓΑΡΙΑΣΜΟΥ</string>

    <!-- Action Bar -->
    <string name="action_bar_default_title">Τίτλος</string>
    <string name="action_bar_main_title">Πορτοφόλι Καρτών</string>
    <string name="action_bar_login_title">Είσοδος</string>
    <string name="action_bar_sign_up_title">Δημιουργία Λογαριασμού</string>
    <string name="action_bar_settings_title">Ρυθμίσεις</string>
    <string name="action_bar_update_user_title">Αλλαγή Στοιχείων Χρήστη</string>
    <string name="action_bar_create_business_card_title">Δημιουργία Επαγγελματικής Κάρτας</string>
    <string name="action_bar_search_business_card_title">Αναζήτηση Επαγγελματικής Κάρτας</string>
    <string name="action_bar_edit_business_card_title">Αλλαγή Στοιχείων Επαγγελματικής Κάρτας</string>

    <!-- Business Card -->
    <string name="text_view_bc_name">John Smith</string>
    <string name="text_view_bc_email">john@smith.com</string>
    <string name="text_view_bc_company">Company</string>
    <string name="text_view_bc_profession">Manager</string>
    <string name="text_view_bc_website">www.johnsmith.com</string>

    <string name="text_view_bc_phone_number">Αριθμός Τηλεφώνου</string>
    <string name="text_view_bc_address">Διεύθυνση</string>
    <string name="text_view_bc_website_hint">Ιστοσελίδα</string>
    <string name="text_view_bc_id">ID Κάρτας:</string>

    <!-- Preferences -->
    <string name="pref_auto_login">Αυτόματη Είσοδος</string>
    <string name="pref_auto_business_card_public">Δημόσια Επαγγελματική Κάρτα</string>
    <string name="pref_category_login_settings">Αυθεντικοποίηση</string>
    <string name="pref_category_business_card_settings">Επαγγελματική Κάρτα</string>

    <!-- Settings -->
    <string name="option_logout">ΑΠΟΣΥΝΔΕΣΗ</string>
    <string name="option_update_user">ΑΛΛΑΓΗ ΣΤΟΙΧΕΙΩΝ ΧΡΗΣΤΗ</string>
    <string name="option_user_related_editText_text">Διαχείριση Λογαριασμού</string>

    <!-- Default Button Values -->
    <string name="button_action_text">Button Action</string>

    <!-- Button Values -->
    <string name="button_action_save">ΑΠΟΘΗΚΕΥΣΗ</string>
    <string name="button_action_create">ΔΗΜΙΟΥΡΓΙΑ</string>

    <!-- hints -->
    <string name="search_hint">Αναζήτηση</string>
    <string name="search_profession_hint">Αναζήτηση Επαγγέλματος/Ιδιότητας</string>
    <string name="search_company_hint">Αναζήτηση Επιχείρησης/Οργανισμού</string>
    <string name="search_business_card_hint">Ονοματεπώνυμο Χρήστη</string>

    <!-- Pager tab titles -->
    <string name="pager_tab_my_cards">Οι Κάρτες Μου</string>
    <string name="pager_tab_added_cards">Κάρτες Τρίτων</string>

</resources>
