<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_login_settings"
        android:title="@string/pref_category_login_settings"
        >

        <SwitchPreference
            android:key="pref_key_auto_login"
            android:title="@string/pref_auto_login"
            android:summary=""
            android:defaultValue="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_business_card_settings"
        android:title="@string/pref_category_business_card_settings">

        <SwitchPreference
            android:key="pref_key_public_business_card"
            android:title="@string/pref_auto_business_card_public"
            android:summary="Make your business card searchable by others"
            android:defaultValue="true"
            />

    </PreferenceCategory>

</PreferenceScreen>