<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/colorWhite"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"

            >

            <View
                android:id="@+id/vertical_divider"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true" />

            <View
                android:id="@+id/horizontal_divider"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:id="@+id/bc_left_side"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/vertical_divider"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@android:color/transparent">

                <TextView
                    android:id="@+id/info_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_bc_name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/info_profession_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_bc_profession"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                style="@style/DividerVertical"
                android:layout_alignRight="@+id/bc_left_side"
                android:layout_marginBottom="@dimen/divider_margin"
                android:layout_marginTop="@dimen/divider_margin" />

            <LinearLayout
                android:id="@+id/bc_right_side"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/vertical_divider"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@android:color/transparent"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/info_email_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/text_view_bc_email" />

                    <TextView
                        android:id="@+id/info_website_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/text_view_bc_website" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>